Remove CMSGC references from startup scripts. [3145]
Doing this won't necessarily quiet down the warning Bob observed from runMcV-Config.bat, but it's a good idea regardless.