@@ -117,12 +117,8 @@ jre\bin\javaw.exe -Dmcv.userpath="%MCV_USERPATH%" -cp %MCV_JAR% edu.wisc.ssec.mc
 if ERRORLEVEL 1 GOTO end
 )
 
-REM temp: toggles the CMS collector
-IF "%USE_CMSGC%"=="1" (
-SET GC_ARGS=-J-XX:+UseConcMarkSweepGC -J-XX:+CMSClassUnloadingEnabled
-) ELSE (
+REM Used to set the garbage collector. keeping around because it may be use in the future.
 SET GC_ARGS=
-)
 
 REM temp?: toggles the visad.java3d.geometryByRef property
 IF "%USE_GEOBYREF%"=="0" (
